--- a/railway.toml
+++ b/railway.toml
@@ -3,6 +3,11 @@ builder = "nixpacks"
 buildCommand = "npm install && npx prisma generate && npx prisma migrate deploy"
 
 [deploy]
-startCommand = "npm start"
+startCommand = "node src/index.js"
+healthcheckPath = "/api/health"
+healthcheckTimeout = 100
 restartPolicyType = "ON_FAILURE"
-restartPolicyMaxRetries = 10 
+restartPolicyMaxRetries = 10
+
+[deploy.env]
+NODE_ENV = "production" 
